# esp32_rustboard

./: Cargo.toml  README.md  sdkconfig.defaults
src/: ble_keyboard.rs  enums.rs  layers.rs  lib.rs  main.rs
src/ble/: mod.rs
src/config/: config.rs  enums.rs  layers.rs  mod.rs
src/config/layout/: dvorak.rs  mod.rs  qwerty.rs
src/debounce/: mod.rs
src/matrix/: mod.rs
