[package]
name = "esp32_rustboard"
version = "0.2.1"
authors = ["65787978"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32_rustboard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["embassy", "esp-idf-svc/native"]
left-side = []
right-side = []
async-scan = [] # Not working properly
debug = []
dvorak = []
qwerty = []

pio = ["esp-idf-svc/pio"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.50.1", default-features = false, features = ["alloc", "embassy-sync"] }
esp-idf-hal = "0.45.1"
chrono = "0.4.38"
esp32-nimble = "0.9.0"
anyhow = "1"
esp-idf-sys = "0.36.1"
embassy-time =  { version = "0.3.2", features = ["generic-queue-8"] }
embassy-futures = "0.1.1"
spin = "0.9.8"
heapless = "0.8.0"
zerocopy = { version = "0.8.14", features = ["derive"] }

[build-dependencies]
anyhow = "1"
embuild = "0.33.0"
